1) Added TouchPunch library to fix Chrome browser bug. 2) Enlarged Run/Skip buttons b/c they were hard to press on Safari

--- a/client/app/problems/problems.css
+++ b/client/app/problems/problems.css
@@ -1,3 +1,13 @@
+.btn {
+  border-radius:0px;
+}
+
+.btn-xl {  
+    padding: 15px 22px;
+    font-size: 24px;
+    line-height: 2;
+}
+
 .starter-template {
   padding: 10px 10px;
   text-align: left;
@@ -49,7 +59,6 @@
   padding-top:15px;
   padding-bottom:5px;
   width: 100%;
-  float: left;
   background-color: #f5f5f5;
   border: 1px solid #dcdcdc;
   font-size: 1.4em;
